--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,11 @@
         <artifactId>commons-lang3</artifactId>
         <version>3.12.0</version>
       </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-log4j12</artifactId>
+        <version>1.7.30</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <repositories>
@@ -129,6 +134,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-failsafe-plugin</artifactId>
+          <version>3.0.0-M5</version>
           <executions>
             <execution>
               <id>integration-test</id>
